--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,22 +25,22 @@ on:
 
 jobs:
   ci:
-    uses: libhal/ci/.github/workflows/library.yml@3.0.3
+    uses: libhal/ci/.github/workflows/library.yml@4.x.y
     with:
       coverage: true
     secrets: inherit
   deploy:
-    uses: libhal/ci/.github/workflows/deploy.yml@3.0.3
+    uses: libhal/ci/.github/workflows/deploy.yml@4.x.y
     secrets: inherit
   build_lpc4074:
-    uses: libhal/ci/.github/workflows/demo_builder.yml@3.0.3
+    uses: libhal/ci/.github/workflows/demo_builder.yml@4.x.y
     with:
       profile: lpc4074
       processor_profile: https://github.com/libhal/libhal-armcortex.git
       platform_profile: https://github.com/libhal/libhal-lpc40.git
     secrets: inherit
   build_lpc4078:
-    uses: libhal/ci/.github/workflows/demo_builder.yml@3.0.3
+    uses: libhal/ci/.github/workflows/demo_builder.yml@4.x.y
     with:
       profile: lpc4078
       processor_profile: https://github.com/libhal/libhal-armcortex.git
